# esphome-hems

./: .gitignore  .gitmodules  README.md  TODO.md  budget-distributor.yaml  compile.ps1  dido.yaml  eebus-cs.yaml  eebus-eg-1.yaml  eebus-eg-2.yaml  eebus-eg2.yaml  eebus-openeebus.yaml  esphome-hems.yaml  fronius-gen24.yaml  hems-ui.js  netzdienliche-steuerung.yaml  requirements-dev.txt  s0-meter-1.yaml  secrets.example.yaml  xemex-csmb.yaml
.github/workflows/: host-tests.yml
components/eebus_cs/: __init__.py  eebus_cs.cpp  eebus_cs.h
components/eebus_eg/: __init__.py  eebus_eg.cpp  eebus_eg.h  semp_decoder.cpp  semp_decoder.h
components/eebus_eg1/: __init__.py  eebus_eg1.cpp  eebus_eg1.h
components/eebus_lpc/: __init__.py  eebus_lpc.cpp  eebus_lpc.h  openeebus_unity.c
components/eebus_wp/: __init__.py  eebus_wp.cpp  eebus_wp.h
components/modbus_server/: __init__.py  modbus_server.cpp  modbus_server.h
components/modbustcp/: __init__.py  modbustcp.cpp  modbustcp.h
custom_components/eebus_lpc/: __init__.py  eebus_lpc.h
custom_components/modbustcp/: modbustcp.cpp
docs/: hems_learnings.md  oss-hpcf-bosch.md  power-distribution-concept.md  system-architecture.md  xemex-control.md
scripts/: sync_patches.py
tests/: CMakeLists.txt  semp_decoder_test.cpp
tools/: apply_patches.py  fake_steuerbox.py  fake_wallbox.py  probe_fronius_modbus.py  test_ski_extraction.py
tools/diagnostics/: analyze_ev_response.py  capture_esphome_restart.py  capture_ev_response.py  capture_oshpcf.py  check_currents.py  check_device_status.py  check_eebus.py  env_config.py  (+10 more)
(+36 files in other folders)
